--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <main class="apresentacao">
       <section class="apresentacao__conteudo">
         <h1 class="apresentacao__conteudo__titulo">
-          Bem-vindos (as) ao meu Portfolio<strong class="titulo-destaque"
-            >!
+        Bem-vindos (as) ao meu Portfolio<strong class="titulo-destaque">!
           </strong>
         </h1>
         <p class="apresentacao__conteudo__texto">
@@ -36,6 +35,9 @@
         alt="Foto perfil"
       />
     </main>
+
+  
+
     <footer class="rodape">      
        
       <div class="apresentacao__links">
