--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,44 +25,30 @@
         </strong>
       </h1>
       <p class="apresentacao__conteudo__texto">
-          Olá! Sou Lisiana Tomelin, desenvolvedora FullStack e UX/UI Designer. Atualmente sou Application Developer na IBM.
+        Olá! Sou Lisiana Tomelin, desenvolvedora FullStack e UX/UI Designer. Atualmente sou Application Developer na
+        IBM.
         Fique a vontade para conferir um pouco do meu trabalho na aba de projetos.
       </p>
-       
-    </section>    
-      <img
-        class="apresentacao__imagem"
-        src="./assets/fotoperfil.png"
-        alt="Foto perfil"
-      />
+
+    </section>
+    <img class="apresentacao__imagem" src="./assets/fotoperfil.png" alt="Foto perfil" />
   </main>
 
-  
+
 
   <footer class="rodape">
-       
+
     <div class="apresentacao__links">
-        <a
-          class="apresentacao__links__navegacao"
-          href="https://github.com/lisatomelin"
-          target="_blank"
-        >
+      <a class="apresentacao__links__navegacao" href="https://github.com/lisatomelin" target="_blank">
         <img src="./assets/github.png" />
         Github
       </a>
-        <a
-          class="apresentacao__links__navegacao"
-          href="https://www.linkedin.com/in/lisianatomelin/"
-          target="_blank"
-        >
+      <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/lisianatomelin/" target="_blank">
         <img src="./assets/linkedin.png" />
         linkedin
       </a>
       <div class="apresentacao_links_copyrights">
-          <a
-            class="apresentacao_links_copyrights"
-            target="_blank"
-          >
+        <a class="apresentacao_links_copyrights" target="_blank">
           <img src="./assets/Copyright.png" />
           Lisiana Tomelin 2025 | Desenvolvedora | Designer
 
@@ -71,4 +58,5 @@
 
   </footer>
 </body>
+
 </html>
